--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -246,66 +246,7 @@
             <div data-simplebar class="sidebar-menu-scroll">
 
                 <!--- Sidemenu -->
-                <div id="sidebar-menu">
-                    <!-- Left Menu Start -->
-                    <ul class="metismenu list-unstyled" id="side-menu">
-                        <li class="menu-title">Menu</li>
-
-                        @if (User.IsInRole("Superadmin"))
-                        {
-                            <li>
-                                <a class="now-link text-dark" asp-controller="Customer" asp-action="index">
-                                    <i class="bx bxs-business"></i>
-                                    <span>Şirketler</span>
-                                </a>
-                            </li>
-                        }
-                        @if (User.IsInRole("Admin"))
-                        {
-                            <li>
-                                <a asp-action="Index" asp-controller="User">
-                                    <i class="fas fa-user-friends"></i>
-                                    <span>Kullanıcılar</span>
-                                </a>
-                            </li>
-                        }
-                        @if (User.IsInRole("Admin"))
-                        {
-                            <li>
-                                <a asp-action="Index" asp-controller="Priority">
-                                    <i class="fas fa-user-friends"></i>
-                                    <span>Öncelikler</span>
-                                </a>
-                            </li>
-                        }
-                        @if (User.IsInRole("SuperAdmin") || User.IsInRole("Admin"))
-                        {
-                            <li>
-                                <a asp-controller="Project" asp-action="Index"> <i class="fas fa-project-diagram"></i><span>Projeler</span></a>
-                            </li>
-                        }
-
-                        <li>
-                            <a href="javascript: void(0);" class="has-arrow waves-effect">
-                                <i class="uil-location-point"></i>
-                                <span>Tanımlamalar</span>
-                            </a>
-                            <ul class="sub-menu" aria-expanded="false">
-                                <li><a href="maps-google.html">Öncelikler</a></li>
-                                @if (User.IsInRole("Admin"))
-                                {
-                                    <li><a href="@Url.Action("Index","Status")">Durumlar</a></li>
-                                }
-                            </ul>
-                        </li>
-
-
-                      
-
-
-
-                    </ul>
-                </div>
+                <partial name="@String.Concat("_",User.FindFirstValue(ClaimTypes.Role),"Menu")" />
                 <!-- Sidebar -->
             </div>
         </div>
