--- a/IsEmirleri.Web/Views/Shared/_PluginsPartial.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_PluginsPartial.cshtml
@@ -37,6 +37,8 @@
 <!-- Sweet Alerts js -->
 <script src="~/assets/libs/sweetalert2/sweetalert2.min.js"></script>
 <script src="~/assets/libs/moment/moment.js"></script>
+<script src="~/assets/libs/parsleyjs/parsley.min.js"></script>
+
 
 <script>
     toastr.options = {
