güncelleme yaparken limit kontrol yapıldı.

--- a/IsEmirleri.Web/Views/Customer/Users.cshtml
+++ b/IsEmirleri.Web/Views/Customer/Users.cshtml
@@ -182,7 +182,7 @@
                             }
                         };
                         $.ajax({
-                            url: '/User/Update',
+                            url: '/Customer/UpdateUser',
                             type: 'POST',
                             data: data,
                             success: (res) => {
