--- a/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
@@ -19,6 +19,10 @@
         </li>
 
         <li>
+            <a asp-controller="Mission" asp-action="Index"> <i class="dripicons-pencil"></i></i><span>Görevler</span></a>
+        </li>
+
+        <li>
             <a href="javascript: void(0);" class="has-arrow waves-effect">
                 <i class="uil-location-point"></i>
                 <span>Tanımlamalar</span>
